# mengelbro

./: CMakeLists.txt
inc/: cudamengele.h  ffmpeg.h  lemonav.h  mandelbrot_oneapi.h  mengele.h  params.h
src/: curamengele.cu  ffmpeg.cpp  lemonav.cpp  main.cpp  mandelbrot_oneapi.cpp  mengele.cpp
